<resources>
    <string name="app_name">白富美海购</string>
    <string name="home">首页</string>
    <string name="shop">店铺</string>
    <string name="sort">分类</string>
    <string name="news">Ta说</string>
    <string name="me">我的</string>
    <string name="search">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name1">商品名称：</string>
    <string name="sale_type">售后类型：</string>
    <string name="return_reason">退款原因：</string>
    <string name="pay_fee">支付平台手续费：</string>
    <string name="pay_fee_tip">（3%手续说明：缺货和长时间未发货由卖家承担，拍错由买家承担）</string>
    <string name="handler">总计：</string>
    <string name="return_intro">退款说明：</string>
    <string name="reply_buyer">卖家意见：</string>
    <string name="refuse">拒绝</string>
    <string name="buy_soldout">"售罄
 SOLD OUT"</string>
    <string name="return_details">退款详情</string>
    <string name="agree">同意</string>
    <string name="refund_money">退款金额：</string>
    <string name="sale_num">退货数量：</string>
    <string name="calendar">查看日历</string>
    <string name="camera">使用拍照和查看相册</string>
    <string name="contacts">查看联系人</string>
    <string name="location">定位</string>
    <string name="microphone">使用麦克风</string>
    <string name="phone">读取联系人</string>
    <string name="sensors">使用传感器</string>
    <string name="sms">使用短信功能</string>
    <string name="storage">存储</string>
    <string name="all_search">热门搜索</string>
    <string name="recently_viewed">搜索历史</string>
    <string name="clear_history">清空搜索历史</string>
    <string name="search_user">找商户</string>
    <string name="create_topic_content_hint">说说你的心得吧...</string>
    <string name="create_topic">发布</string>
    <string name="relation">关联商品</string>
    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="history_search">历史搜索</string>
    <string name="no_history_search">暂无搜索历史</string>
    <string name="from_order">从订单导入</string>
    <string name="my_address">我的收货地址</string>
    <string name="push_setting">消息推送设置</string>
    <string name="clear_cache">清理缓存</string>
    <string name="about_bfme">关于BFMe</string>
    <string name="figet_mima">忘记密码</string>
    <string name="setting_phone">手机绑定</string>
    <string name="edit_qianming">个性签名</string>
    <string name="receive_new_message">接收新消息通知</string>
    <string name="look_detail">查看详情</string>
    <string name="add_sort">添加分类</string>
    <string name="topic">话题</string>
    <string name="commodity">商品</string>
    <string name="rank">排序</string>
    <string name="filtrate">筛选</string>
    <string name="logo">BFMe</string>
    <string name="look_all">查看全部</string>
    <string name="limited">限时购买</string>
    <string name="look_more">查看更多</string>
    <string name="reset">重置</string>
    <string name="affirm">确认</string>
    <string name="price_section">价格区间</string>
    <string name="max_price">最高价</string>
    <string name="min_price">最低价</string>
    <string name="is_off">提示：该商品已下架！</string>
    <string name="gross_freight">总运费:</string>
    <string name="total_taxes">总税费:</string>
    <string name="total_money">总商品金额:</string>
    <string name="total">合计：</string>
    <string name="submit_order">提交订单</string>
    <string name="recipients">收件人：</string>
    <string name="mobile_phone">手机：</string>
    <string name="province">省市区：</string>
    <string name="detailed_address">详细地址：</string>
    <string name="id_number">身份证号：</string>
    <string name="save">保存</string>
    <string name="select_address">勾选地址为默认地址</string>
    <string name="add_address">添加新地址</string>
    <string name="return_type">退款类型：</string>
    <string name="return_cause">退款原因：</string>
    <string name="return_num">退货数量：</string>
    <string name="return_price">退款金额：</string>
    <string name="return_all_price">上限为总计金额：¥0.00</string>
    <string name="service_charge">支付平台手续费</string>
    <string name="amount_to">总计</string>
    <string name="explain">退款说明</string>
    <string name="submit_applications">提交申请</string>
    <string name="search_hint">请输入商品或品牌名称</string>
    <string name="cancel">取消</string>
    <string name="authentication">验证身份</string>
    <string name="replace_phone_number">更换手机号</string>
    <string name="update_completed">更新完成</string>
    <string name="current_phonenumber">当前注册手机号：</string>
    <string name="write_verification_coder">请填写验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification">验证</string>
    <string name="order_amount">订单金额</string>
    <string name="select_pay_way">选择支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="WeChat_Pay">微信支付</string>
    <string name="immediate_payment">立即支付</string>
    <string name="subtotal">小计:</string>
    <string name="size">尺寸：</string>
    <string name="color">颜色：</string>
    <string name="sku">库存：</string>
    <string name="purchase_quantity">购买数量:</string>
    <string name="confirm">确定</string>
    <string name="satisfaction_evaluation">满意度评价</string>
    <string name="describe">宝贝与描述相符</string>
    <string name="speed">买家发货速度</string>
    <string name="service_attitude">买家的服务态度</string>
    <string name="anonymous_evaluation">匿名评价</string>
    <string name="submit">提交</string>
    <string name="complaint_cause">请输入投诉原因</string>
    <string name="add_topic_title">添加标题（不超过15个字）</string>
    <string name="grade_total">积分合计：--</string>
    <string name="approach_of_achieving">获取途径</string>
    <string name="grade">积分</string>
    <string name="acquisition_time">获取时间</string>
    <string name="remark">备注:</string>
    <string name="import_remark_content">请输入您的备注内容</string>
    <string name="freight">运费：</string>
    <string name="tariff">关税：</string>
    <string name="redeem_code">兑换码:</string>
    <string name="official_hint">更多兑换码请添加BFMe官方微信：bfme123</string>
    <string name="import_phone_number">请输入手机号</string>
    <string name="import_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="quick_register">快速注册</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="logistics">物流跟踪</string>
    <string name="shop_introduction">店铺介绍</string>
    <string name="quality_yes">海外进口</string>
    <string name="bestbuyer_yes">专业卖家</string>
    <string name="identity_yes">身份验证</string>
    <string name="ensure_yes">保障卖家</string>
    <string name="recommend">推荐</string>
    <string name="newest">最新</string>
    <string name="hot_sell">热销</string>
    <string name="price">价格</string>
    <string name="no_more_data">----------没有了----------</string>
    <string name="identity_authentication">身份认证</string>
    <string name="import_name">请输入您的真实姓名</string>
    <string name="import_id_number">请输入您的身份证号码</string>
    <string name="add_address_hint">您还没有收货地址，请添加~</string>
    <string name="our_total">本店合计：</string>
    <string name="add_attention">+关注</string>
    <string name="product_total">商品量</string>
    <string name="notice_total">关注</string>
    <string name="look_total">浏览量</string>
    <string name="commodity_send_out">商品出库</string>
    <string name="overseas_warehouse">海外仓库</string>
    <string name="wait_receiving">等待收货</string>
    <string name="finish">完成</string>
    <string name="order_waitepay">等待买家付款</string>
    <string name="shop_info">进入店铺</string>
    <string name="order_remarks_hint">暂无备注信息</string>
    <string name="commodity_total_price">商品总价：</string>
    <string name="integral_deduction">积分抵扣：</string>
    <string name="distribution_way">配送方式：</string>
    <string name="real_pay_in_total">实付合计：</string>
    <string name="order_id">订单编号：</string>
    <string name="order_create_time">创建时间：</string>
    <string name="finish_time">成交时间：</string>
    <string name="pay_way">支付方式：</string>
    <string name="import_old_pwd">请输入旧密码</string>
    <string name="import_new_pwd">请输入新密码（6~20位）</string>
    <string name="affirm_new_pwd">请确认新密码</string>
    <string name="affirm_pwd">确认密码</string>
    <string name="picture">图片</string>
    <string name="all_picture">全部图片</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="fax_title">税费</string>
    <string name="choose_color_size">选择颜色和尺寸：</string>
    <string name="seller_info">专业卖家信息</string>
    <string name="bso">正品货源保证</string>
    <string name="fans">粉丝</string>
    <string name="relation_seller">联系卖家</string>
    <string name="go_shop">进店逛逛</string>
    <string name="comment_on_commodity">商品评价</string>
    <string name="look_all_evaluate">查看全部评价</string>
    <string name="no_evaluate">暂无评价</string>
    <string name="graphic_details">图文详情</string>
    <string name="add_cart">加入购物车</string>
    <string name="quick_buy">立即购买</string>
    <string name="import_phone">请输入手机号</string>
    <string name="register_agree">《白富美海淘注册协议》</string>
    <string name="register_next">下一步</string>
    <string name="search_overall">搜索您喜欢的商品或店铺</string>
    <string name="search_shop_hint">搜索您喜欢的商品</string>
    <string name="load">正在加载...</string>
    <string name="select_province">请选择省市区</string>
    <string name="head_portrait">头像</string>
    <string name="nick">昵称</string>
    <string name="personage_info">个人信息</string>
    <string name="out_login">退出登录</string>
    <string name="register_finish">完成注册</string>
    <string name="check_all">全选</string>
    <string name="cart_account">结算</string>
    <string name="add_comment">添加一条评论</string>
    <string name="subscription">订阅</string>
    <string name="pay_error_hint">很抱歉，支付失败</string>
    <string name="pay_succeed_hint">恭喜你，支付成功</string>
    <string name="personal_center">个人中心</string>
    <string name="praise">获赞</string>
    <string name="sign_in">签到</string>
    <string name="my_order">我的订单</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send_product">待发货</string>
    <string name="wait_accept_product">待收货</string>
    <string name="wait_evaluate">待评价</string>
    <string name="sale_service">退款/售后</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_integral">我的积分</string>
    <string name="my_comment">我的评论</string>
    <string name="complaint">投诉反馈</string>
    <string name="service">在线客服</string>
    <string name="up_shop">我要开店</string>
    <string name="help_centre">帮助中心</string>
    <string name="invite_friend">邀请好友</string>
    <string name="go_shopping">去购物</string>
    <string name="cart_empty">购物车空空如也~~</string>
    <string name="new_ugc_comment">新的话题评论</string>
    <string name="look_all_comment">查看全部评论</string>
    <string name="not_pass_cause">未通过原因</string>
    <string name="evaluate">评价</string>
    <string name="evaluate_hint">写下你对商品的评价~</string>
    <string name="photo_num">0张</string>
    <string name="delete">删除</string>
    <string name="cancel_attention">取消关注</string>
    <string name="apply_for_after_sales">申请售后</string>
    <string name="hot_topic">热门话题</string>
    <string name="recommend_topic">推荐话题</string>
    <string name="photo_select">从相册选择</string>
    <string name="photograph">拍照</string>
    <string name="snapped_up_immediately">立即抢购</string>
    <string name="surplus">还剩</string>
    <string name="order_cancel">订单自动取消</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_pay">去支付</string>
    <string name="edit">编辑</string>
    <string name="loading">正在载入...</string>
    <string name="integral_deduction_¥">积分可抵扣：¥%1$s</string>
    <string name="hot_products">热销商品</string>
    <string name="seckill_price">秒杀价</string>
    <string name="wait_pay_result">等待返回结果，请稍后</string>
    <string name="deal_cancel">交易取消</string>
    <string name="get_order_info">获取订单信息，请稍后</string>
    <string name="is_WXApp_Installed">请查看是否安装微信客户端</string>
    <string name="back_home">回到首页</string>
    <string name="anew_pay">重新支付</string>
</resources>