<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/background"
              android:orientation="vertical">

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_regist"
        android:drawableLeft="@drawable/icon_phoe"
        android:drawablePadding="15dp"
        android:hint="@string/import_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:maxLength="6"
            android:background="@drawable/shape_regist"
            android:drawableLeft="@drawable/codeicon"
            android:drawablePadding="10dp"
            android:hint="@string/write_verification_coder"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@android:color/darker_gray"/>

        <Button
            android:id="@+id/btn_getcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editText"
            android:layout_alignBottom="@id/editText"
            android:layout_alignEnd="@id/editText"
            android:layout_alignRight="@id/editText"
            android:layout_marginRight="12dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:text="@string/get_verification_code"
            android:textColor="@color/colorZhu"
            android:textSize="16sp"/>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checkbox_off"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/agree"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_regist_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_agree"
            android:textColor="@color/colorZhu"
            android:clickable="true"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/btn_regist_next"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_circle_range1"
        android:text="@string/register_next"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
</LinearLayout>