<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_oldpwd"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@drawable/changenick_selector"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/import_old_pwd"
        android:paddingLeft="15dp"
        android:textSize="13sp"
        android:maxLength="20"
        android:textColor="@android:color/black" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/et_newpwd1"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/changenick_selector"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/import_new_pwd"
        android:textSize="13sp"
        android:paddingLeft="15dp"
        android:maxLength="20"
        android:textColor="@android:color/black" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/et_newpwd2"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/changenick_selector"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/affirm_new_pwd"
        android:paddingLeft="15dp"
        android:textSize="13sp"
        android:maxLength="20"
        android:textColor="@android:color/black" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/btn_savenick"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_circle_range1"
        android:text="@string/affirm_pwd"
        android:textColor="@android:color/white" />
</LinearLayout>