<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/include_title"
        layout="@layout/main_base_title" />

    <FrameLayout
        android:id="@+id/fragment_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/translucence_gray_fafafafa" />

    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_selector"
            android:gravity="center_horizontal"
            android:text="@string/home"
            android:textColor="@drawable/selecter_text_ture_035de9"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/shop_selector"
            android:gravity="center_horizontal"
            android:text="@string/shop"
            android:textColor="@drawable/selecter_text_ture_035de9"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_sort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/sort_selector"
            android:gravity="center_horizontal"
            android:text="@string/sort"
            android:textColor="@drawable/selecter_text_ture_035de9"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/message_selector"
            android:gravity="center_horizontal"
            android:text="@string/news"
            android:textColor="@drawable/selecter_text_ture_035de9"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/my_selector"
            android:gravity="center_horizontal"
            android:text="@string/me"
            android:textColor="@drawable/selecter_text_ture_035de9"
            android:textSize="11sp" />

    </RadioGroup>
</LinearLayout>
